[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/TimelineHeadNode.gd" type="Script" id=1]
[ext_resource path="res://addons/DialogGraph/font/default.tres" type="DynamicFont" id=2]

[node name="TimelineHeadNode" type="GraphNode"]
margin_right = 192.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 60 )
title = "TimelineHeadNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
is_timeline_head = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 62.0
custom_constants/margin_top = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 38.0

[node name="timeline_head_name" type="LineEdit" parent="MarginContainer/HBoxContainer2"]
margin_right = 123.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Timeline name"

[node name="run" type="Button" parent="MarginContainer/HBoxContainer2"]
margin_left = 127.0
margin_right = 160.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
text = "run"

[connection signal="resize_request" from="." to="." method="_on_TimelineHeadNode_resize_request"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer2/timeline_head_name" to="." method="_on_timeline_head_name_focus_exited"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer2/timeline_head_name" to="." method="_on_timeline_head_name_text_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer2/run" to="." method="_on_run_pressed"]
